--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dropbox</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-    <header></header>
+<body id="debug" class="w-100 font-size">
+    <header id="app_header" class="">
+        <div class="container d-flex flex-row flex-justify-between padding-10lr padding-10lr-14ud">
+            <div class="header_left d-flex flex-center-center gap-10">
+                <img src="./assets/img/logo-small.png" alt="logo" class="">
+                <span>Perchè Dropbox</span>
+                <span>Funzioni</span>
+                <span>Piani e Prezzi</span>
+            </div>
+            <div class="header_right d-flex flex-center-center gap-10">
+                <span>Support</span>
+                <span>Contatta l'ufficio vendite</span>
+                <span>accedi</span>
+                <span class="button">Inizia</span>
+            </div>
+        </div>
+
+    </header>
     <main></main>
     <footer></footer>
 </body>
