--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body id="debug" class="w-100 font-size">
     <header id="app_header" class="">
-        <div class="container d-flex flex-row flex-justify-between padding-10lr padding-10lr-14ud">
+        <div class="container d-flex flex-row flex-justify-between padding-09lr-08ud">
             <div class="header_left d-flex flex-center-center gap-10">
                 <img src="./assets/img/logo-small.png" alt="logo" class="">
                 <span>Perchè Dropbox</span>
@@ -23,12 +23,30 @@
                 <span>Support</span>
                 <span>Contatta l'ufficio vendite</span>
                 <span>accedi</span>
-                <span class="button">Inizia</span>
+                <button class="button">Inizia</button>
             </div>
         </div>
-
     </header>
-    <main></main>
+    <main id="app_main" class="d-flex flex-center-center">
+        <section id="main_intro" class="padding-12centLR d-flex flex-center-center bg-azure">
+            <div class="container">
+                <h1 class="h1_main_intro">Tutto cio che ti serve per il lavoro, in un unico posto</h1>
+                <div class="">
+                    <img src="./assets/img/jumbo.png" alt="Proposta per il cliente" class="img-float-test img_main_intro_width">
+                    <div class="d-flex flex-column">
+                        <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archivizione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                        <button class="button">Inizia la tua prova gratuita</button>
+                        <span>Annulla in qualsiasi momento</span>
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <section></section>
+
+
+    </main>
     <footer></footer>
 </body>
 </html>
