commit finish intro

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body id="debug" class="w-100 font-size">
     <header id="app_header" class="">
         <div class="container d-flex flex-row flex-justify-between padding-09lr-08ud">
-            <div class="header_left d-flex flex-center-center gap-10">
+            <div class="header_left d-flex flex-center-center gap-1rem">
                 <img src="./assets/img/logo-small.png" alt="logo" class="">
                 <span>Perchè Dropbox</span>
                 <span>Funzioni</span>
                 <span>Piani e Prezzi</span>
             </div>
-            <div class="header_right d-flex flex-center-center gap-10">
-                <span>Support</span>
+            <div class="header_right d-flex flex-center-center gap-1rem">
+                <span>Supporto</span>
                 <span>Contatta l'ufficio vendite</span>
                 <span>accedi</span>
                 <button class="button">Inizia</button>
@@ -28,23 +28,22 @@
         </div>
     </header>
     <main id="app_main" class="d-flex flex-center-center">
-        <section id="main_intro" class="padding-12centLR d-flex flex-center-center bg-azure">
-            <div class="container">
-                <h1 class="h1_main_intro">Tutto cio che ti serve per il lavoro, in un unico posto</h1>
+        <section id="main_intro" class="padding-main-intro d-flex flex-center-center bg-azure">
+            <div class="container d-flex flex-column gap-2rem">
+                <h1 class="h1_intro">Tutto cio che ti serve per il lavoro, in un unico posto</h1>
                 <div class="">
-                    <img src="./assets/img/jumbo.png" alt="Proposta per il cliente" class="img-float-test img_main_intro_width">
-                    <div class="d-flex flex-column">
+                    <img src="./assets/img/jumbo.png" alt="Proposta per il cliente" class="img_intro_float img_intro_width">
+                    <div class="d-flex flex-column gap-1rem">
                         <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archivizione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                         <button class="button">Inizia la tua prova gratuita</button>
                         <span>Annulla in qualsiasi momento</span>
-                        <i class="fa-solid fa-arrow-down"></i>
+                        <i class="fa-solid fa-arrow-down arrow_intro margin-top-2rem"></i>
                     </div>
                 </div>
             </div>
 
         </section>
         <section></section>
-
 
     </main>
     <footer></footer>
