commit working on main
done radio buttons

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
     </header>
-    <main id="app_main" class="d-flex flex-center-center">
+    <main id="app_main" class="d-flex  flex-column flex-center-center">
         <section id="main_intro" class="padding-main-intro d-flex flex-center-center bg-azure">
             <div class="container d-flex flex-column gap-2rem">
                 <h1 class="h1_intro">Tutto cio che ti serve per il lavoro, in un unico posto</h1>
@@ -41,9 +41,22 @@
                     </div>
                 </div>
             </div>
-
         </section>
-        <section></section>
+        <section class="w-50 d-flex flex-justify-start">
+            <div class="container margin-top-6rem">
+                <h1 class="h1_big">Trova il business che fa per te</h1>
+                <span class="radiobuttons d-flex flex-row flex-center-center gap-3rem margin-top-3rem">
+                    <span class="d-flex flex-center-center gap-04rem">
+                        <input type="radio" name="fatturazione" value="mensile" class="radiobutton">
+                        <span>Fatturazione mensile</span>
+                    </span>
+                    <span class="d-flex flex-center-center gap-04rem">
+                        <input type="radio" name="fatturazione" value="annuale" class="radiobutton">
+                        <span>Fatturazione annuale</span>
+                    </span>
+                </span>
+            </div>
+        </section>
 
     </main>
     <footer></footer>
