--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section class="w-50 d-flex flex-justify-start">
             <div class="container margin-top-6rem">
                 <h1 class="h1_big">Trova il business che fa per te</h1>
-                <span class="radiobuttons d-flex flex-row flex-center-center gap-3rem margin-top-3rem">
+                <span class="radiobuttons d-flex flex-row gap-3rem margin-top-3rem margin-bottom-3rem">
                     <span class="d-flex flex-center-center gap-04rem">
                         <input type="radio" name="fatturazione" value="mensile" class="radiobutton">
                         <span>Fatturazione mensile</span>
@@ -55,6 +55,45 @@
                         <span>Fatturazione annuale</span>
                     </span>
                 </span>
+                <div id="your_plain">
+                    <div class="container">
+                        <div class="row d-flex flex-row flex-wrap">
+                            <div class="col-4 card d-flex flex-column">
+                                <span class="d-flex flex-center-center gap-04rem padding-06remUD">
+                                    <i class="fa-solid fa-user"></i>
+                                    <span>Singolo</span>
+                                </span>
+                                <hr>
+                                <div class="padding_card_down d-flex flex-column gap-1rem">
+                                    <h1 class="h1_card">Professional</h1>
+                                    <div class="price d-flex flex-column gap-04rem">
+                                        <span><strong>&euro; 12.00</strong></span>
+                                        <span>/mese</span>
+                                    </div>
+                                    <div class="d-flex flex-column gap-04rem">
+                                        <p><i class="fa-solid fa-user"></i> 1 utente</p>
+                                        <p><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</p>
+                                        <p><i class="fa-solid fa-share-nodes"></i> Funzioni di produttività premium e condivisione file semplice e sicura</p>
+                                    </div>
+                                    <button class="button">Prova gratis per 30 giorni</button>
+                                    <span>oppure <a href="">acquista ora</a></span>
+                                    <hr>
+                                    <h3>Punti Salienti del piano</h3>
+                                    <ul class="list_cards">
+                                        <li><i class="fa-solid fa-check color-blue"></i> invia file fino a 100GB con Dropbox Transfert</li>
+                                        <li><i class="fa-solid fa-check color-blue"></i> Cartelle offline su dispositivi mobili</li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                            <div class="col-4"></div>
+                            <div class="col-4"></div>
+                            <div class="col-4"></div>
+                            <div class="col-4"></div>
+                            <div class="col-4"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
