commit finish parter dropbox

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                         <span>Fatturazione annuale</span>
                     </span>
                 </span>
-                <div id="your_plain">
+                <div id="your_plan">
                     <div class="container">
                         <div class="row d-flex flex-row flex-wrap m--1lr">
                             <!--//FIRST CARD -->
                             <div class="col-4 card d-flex flex-column py-lr-1rem">
-                                <div class="border-1-blue">
+                                <div class="border-1-blue h-100">
                                     <span class="d-flex flex-center-center gap-04rem py-06-ud">
                                         <i class="fa-solid fa-user"></i>
                                         <span>Singolo</span>
@@ -81,7 +81,7 @@
                                         <span>oppure <a href="">acquista ora</a></span>
                                         <hr class="hr_little border-1-blue">
                                         <h3 class="py-t-1">Punti Salienti del piano</h3>
-                                        <ul class="list_cards d-flex flex-column gap-1rem">
+                                        <ul class="list_cards d-flex flex-column gap-07">
                                             <li><i class="fa-solid fa-check color-blue"></i> Invia file fino a 100GB con Dropbox Transfert</li>
                                             <li><i class="fa-solid fa-check color-blue"></i> Cartelle offline su dispositivi mobili</li>
                                         </ul>
@@ -91,9 +91,9 @@
                             
                             <!--//SECOND CARD -->
                             <div class="col-4 card d-flex flex-column py-lr-1rem">
-                                <div class="border-1-blue">
+                                <div class="border-1-blue h-100">
                                     <span class="d-flex flex-center-center gap-04rem py-06-ud">
-                                        <i class="fa-solid fa-user"></i>
+                                        <i class="fa-solid fa-users"></i>
                                         <span>Team</span>
                                     </span>
                                     <hr class="border-1-blue">
@@ -112,7 +112,7 @@
                                         <span>oppure <a href="">acquista ora</a></span>
                                         <hr class="hr_little border-1-blue">
                                         <h3 class="py-t-1">Punti Salienti del piano</h3>
-                                        <ul class="list_cards d-flex flex-column gap-1rem">
+                                        <ul class="list_cards d-flex flex-column gap-07">
                                             <li><i class="fa-solid fa-check color-blue"></i> Nessun limite di spazio per i file</li>
                                             <li><i class="fa-solid fa-check color-blue"></i> Cartelle offline su dispositivi mobili</li>
                                             <li><i class="fa-solid fa-check color-blue"></i> Risparmio del 50% rispetto alle iscrizioni singole</li>
@@ -125,9 +125,9 @@
 
                             <!--//THIRD CARD -->
                             <div class="col-4 card d-flex flex-column py-lr-1rem">
-                                <div class="border-1-blue">
+                                <div class="border-1-blue h-100">
                                     <span class="d-flex flex-center-center gap-04rem py-06-ud">
-                                        <i class="fa-solid fa-user"></i>
+                                        <i class="fa-solid fa-building"></i>
                                         <span>Azienda</span>
                                     </span>
                                     <hr class="border-1-blue">
@@ -135,7 +135,7 @@
                                         <h1 class="h1_card">Enterprise</h1>
                                         <div class="price d-flex flex-column gap-04rem">
                                             <span><strong>Contattaci</strong></span>
-                                            <span></span>
+                                            <span>-</span>
                                         </div>
                                         <div class="d-flex flex-column gap-1rem py-tb-1">
                                             <p><i class="fa-solid fa-user"></i> 10 o più utenti</p>
@@ -146,7 +146,7 @@
                                         <span>oppure <a href="">acquista ora</a></span>
                                         <hr class="hr_little border-1-blue">
                                         <h3 class="py-t-1">Punti Salienti del piano</h3>
-                                        <ul class="list_cards d-flex flex-column gap-1rem">
+                                        <ul class="list_cards d-flex flex-column gap-07">
                                             <li><i class="fa-solid fa-check color-blue"></i> Cartelle offline su dispositivi mobili</li>
                                             <li><i class="fa-solid fa-check color-blue"></i> Servizio di assistenza 24/h</li>
                                             <li><i class="fa-solid fa-check color-blue"></i> Possibilità di personalizzazione totale</li>
@@ -154,10 +154,40 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
+
+                <div class="container margin-top-2rem">
+                    <div class="col-12 d-flex flex-column border-1-gray">
+                        <span class="d-flex flex-center-center gap-04rem py-06-ud">
+                            <i class="fa-solid fa-building"></i>
+                            <span>Team</span>
+                        </span>
+                        <hr>
+                        <div class="d-flex flex-row py-tb-1_7">
+                            <div class="col-8 d-flex flex-column gap-07 py-l-1_5">
+                                <h1>Enterprise</h1>
+                                <h3>Contatta l'ufficio vendite per i prezzi</h3>
+                                <p class="py-t-1">Soluzioni personalizzate e su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
+                            </div>
+                            <div class="col-4 position-relative">
+                                <button class="button position-absolute right-1_5">Contatta l'ufficio vendite</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 d-flex flex-row margin-top-4rem">
+                        <div class="col-7">
+                            <img src="./assets/img/partner.png" alt="partner" class="">
+                        </div>
+                        <div class="col-5 partner_dropbox d-flex flex-column gap-1rem">
+                            <h1>Entra in contatto con un partner Dropbox</h1>
+                            <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                            <span><button class="button2">Trova un partner</button></span>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
 
