commit finish cards operations

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="col-12 d-flex flex-row margin-top-4rem">
                         <div class="col-7">
                             <img src="./assets/img/partner.png" alt="partner" class="">
@@ -186,8 +187,58 @@
                             <span><button class="button2">Trova un partner</button></span>
                         </div>
                     </div>
-                </div>
+                    <div class="col-12 m-t-5">
+                        <h1 class="col-12 py-b-1 h1_big">Esegui piu operazioni con Dropbox Business</h1>
+                        <div class="row d-flex flex-row flex-wrap">
+                            <div class="card_operations col-4 d-flex flex-column gap-1rem">
+                                <img src="./assets/img/business-feature-switching-tools.png" alt="Business Tools">
+                                <h1>Passa di meno tra uno strumento all'altro</h1>
+                                <p>
+                                    Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                                </p>
+                            </div>
+                            <div class="card_operations col-4 d-flex flex-column gap-1rem">
+                                <img src="./assets/img/business-feature-send-files-it.png" alt="Business Files">
+                                <h1>Passa di meno tra uno strumento all'altro</h1>
+                                <p>
+                                    Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                                </p>
+                            </div>
+                            <div class="card_operations col-4 d-flex flex-column gap-1rem">
+                                <img src="./assets/img/business-feature-coordinate-it.png" alt="Business Coordinate">
+                                <h1>Passa di meno tra uno strumento all'altro</h1>
+                                <p>
+                                    Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                                </p>
+                            </div>
+                            <div class="card_operations col-4 d-flex flex-column gap-1rem">
+                                <img src="./assets/img/business-feature-integrations-it.png" alt="Business Integration">
+                                <h1>Passa di meno tra uno strumento all'altro</h1>
+                                <p>
+                                    Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                                </p>
+                            </div>
+                            <div class="card_operations col-4 d-flex flex-column gap-1rem">
+                                <img src="./assets/img/business-feature-multi-device.png" alt="Business Multi-Device">
+                                <h1>Passa di meno tra uno strumento all'altro</h1>
+                                <p>
+                                    Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                                </p>
+                            </div>
+                            <div class="card_operations col-4 d-flex flex-column gap-1rem">
+                                <img src="./assets/img/business-feature-security.png" alt="Business Security">
+                                <h1>Passa di meno tra uno strumento all'altro</h1>
+                                <p>
+                                    Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                                </p>
+                            </div>
 
+
+
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </section>
 
