commit finish cards universities

--- a/index.html
+++ b/index.html
@@ -232,12 +232,54 @@
                                     Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
                                 </p>
                             </div>
-
-
-
                         </div>
                     </div>
-
+                    <div class="col-8 margin-top-2rem margin-bottom-3rem d-flex flex-column gap-07">
+                        <h1 class="h1_big py-b-1">Più di 500.000 team utilizzano Dropbox Business</h1>
+                        <a href="">Scopri di più sui nostri clienti</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="w-100">
+            <div class="container col-12">
+                <div class="row d-flex flex-row flex-wrap">
+                    <div class="card col-4 d-flex flex-row flex-wrap">
+                        <div class="col-6 cube bg-img-green d-flex flex-center-center">
+                            <img src="./assets/img/designit.svg" alt="Designit">
+                        </div>
+                        <div class="col-6 cube bg-img-brown d-flex flex-center-center">
+                            <img src="./assets/img/arizona_state_university.svg" alt="Arizona State University">
+                        </div>
+                        <div class="col-6 cube bg-img-blue d-flex flex-center-center">
+                            <img src="./assets/img/university_of_florida.svg" alt="University of Florida">
+                        </div>
+                        <div class="col-6 cube bg-img-red d-flex flex-center-center">
+                            <img src="./assets/img/topps.svg" alt="Topps">
+                        </div>
+                    </div>
+                    <div class="card col-4 d-flex flex-column py-3 gap-2rem bg-img-gray">
+                        <img src="./assets/img/designit.svg" alt="Designit" class="cube_img_center">
+                        <hr class="hr_little">
+                        <p>
+                            "I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".
+                        </p>
+                        <span>Morten Thomsen, Global IT Lead</span>
+                    </div>
+                    <div class="card col-4 d-flex flex-row flex-wrap">
+                        <div class="col-6 cube bg-img-red2 d-flex flex-center-center">
+                            <img src="./assets/img/world_bicycle_relief.svg" alt="World Bicycle Relief">
+                        </div>
+                        <div class="col-6 cube bg-img-azure d-flex flex-center-center">
+                            <img src="./assets/img/hearst_corp.svg" alt="Hearst Corporation">
+                        </div>
+                        <div class="col-6 cube bg-img-blue2 d-flex flex-center-center">
+                            <img src="./assets/img/lonely_planet.svg" alt="Lonely Planet">
+                        </div>
+                        <div class="col-6 cube bg-img-yellow d-flex flex-center-center">
+                            <img src="./assets/img/clear_channel.svg" alt="Clear Channel">
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
