working on main

--- a/index.html
+++ b/index.html
@@ -283,6 +283,19 @@
                 </div>
             </div>
         </section>
+        <section class="w-100 bg-azure d-flex flex-center-center py-tb-3">
+            <div class="container col-12 d-flex flex-row flex-justify-center flex-wrap">
+                <h1 class="h1_big col-3 c-brown">Porta Dropbox Business nella tua azienda.</h1>
+                <div class="col-3 position-relative"><button class="button3 position-absolute right">Inizia la tua prova gratuita</button></div>
+            </div>
+        </section>
+        <section class="w-100 d-flex flex-center-center">
+            <div class="col-6">
+                <h1 class="h1_big">Domande frequenti</h1>
+                <hr>
+                
+            </div>
+        </section>
 
     </main>
     <footer></footer>
