working on footer

--- a/index.html
+++ b/index.html
@@ -289,15 +289,25 @@
                 <div class="col-3 position-relative"><button class="button3 position-absolute right">Inizia la tua prova gratuita</button></div>
             </div>
         </section>
-        <section class="w-100 d-flex flex-center-center">
-            <div class="col-6">
-                <h1 class="h1_big">Domande frequenti</h1>
+        <section class="w-100 d-flex flex-center-center ">
+            <div class="col-6 m-t-5 d-flex flex-column gap-2rem">
+                <h1 class="h1_big py-b-1">Domande frequenti</h1>
                 <hr>
-                
+                <span class="d-flex flex-row flex-align-center gap-2rem"><h1>Qual'è la differenza tra Dropbox Business Standart e Dropbox Business Advanced?</h1><i class="fa-solid fa-caret-down arrow_FAQ"></i></span>
+                <hr>
+                <span class="d-flex flex-row flex-align-center gap-2rem"><h1>Qual'è la differenza tra Dropbox Business Standart e Dropbox Business Advanced?</h1><i class="fa-solid fa-caret-down arrow_FAQ"></i></span>
+                <hr>
+                <span class="d-flex flex-row flex-align-center gap-2rem"><h1>Qual'è la differenza tra Dropbox Business Standart e Dropbox Business Advanced?</h1><i class="fa-solid fa-caret-down arrow_FAQ"></i></span>
             </div>
         </section>
-
     </main>
-    <footer></footer>
+    <footer id="app_footer">
+        <div class="container w-100 bg-black c-white d-flex flex-center-center">
+            <div class="col-7">
+                <div class="w-20">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero praesentium sint atque qui fugiat perferendis voluptatum eveniet, culpa, iste libero cupiditate debitis repellat! Iste maiores eligendi dolor optio aspernatur sint, reprehenderit numquam consequatur soluta blanditiis eaque ducimus illo eveniet quam at omnis esse cumque nihil, voluptates quis accusamus ipsa animi!
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
